WIP: Changed font.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,8 @@ html, body {
     color: #333333;
     cursor: pointer;
     display: inline-block;
-    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /* font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-family: serif;
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
