--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,8 +49,10 @@ html, body {
 }
 
 .img {
-    width: 100%;
-    height: 80%;
+    width: 30vw;
+    height: 30vh;
+    object-fit: cover;
+    justify-content: center;
 }
 
 .img:hover {
